--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 img{
     width: 75px;
 }
+
+.Branch{
+    color: blue;
+    font-size: larger;
+    text-align: center;
+    cursor: pointer;
+    background-color: aquamarine;
+}
