--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-img{
+.logo {
     width: 75px;
+    position: fixed;
+    top: 20px;
+    left: 47.5%;
+    display: inline-block;
+    cursor: pointer;
 }
 
-.Branch{
-    color: blue;
-    font-size: larger;
-    text-align: center;
-    cursor: pointer;
-    background-color: aquamarine;
-}
