--- a/style(início).css
+++ b/style(início).css
@@ -1,12 +1,15 @@
 :root {
     box-sizing: border-box;
-    }
+    --dark-orange: darkorange;
+    --light-gray: lightgray;
+    --black: black;
+}
 
 *,
 ::before,
 ::after {
     box-sizing: inherit;
-    }
+}
 
 body{
     overflow: hidden;
@@ -18,27 +21,27 @@ body{
 
 li{
     list-style: none;
-    color: black;
+    color: var(--black);
 }
 
-.burguer-button{
-    margin-left: 10px;
-    width: 40px;
-    height: 40px;
+.burger-button{
+    margin-left: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 .main-menu{
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: lightgray;
-    border: 2px black solid;
+    background-color: var(--light-gray);
+    border: 2px var(--black) solid;
     border-radius: 3%;
-    width: 500px;
-    margin-bottom: 50px;
+    width: 31.25rem; /* 500px */
+    margin: 1rem; /* Adjust this value if needed */
     position: absolute;
-    right: 320px;
-    top: 100px;
+    right: 1rem; /* Adjust this value if needed */
+    top: 1rem; /* Adjust this value if needed */
 }
 
 .menu-list{
@@ -46,31 +49,31 @@ li{
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    
 }
 
 .sensor-showcase{
     position: absolute;
-    top: 200px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 80%; /* Adjust this value if needed */
     overflow: hidden;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .sensor-container{
-    width: 200px;
-    height: 600px;
-    margin-right: 200px;
-    border: 6px darkorange solid;
+    width: 12.5rem; /* 200px */
+    height: 37.5rem; /* 600px */
+    border: 6px var(--dark-orange) solid;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: orange;
-  
+    transition: all 0.3s ease-in-out;
 }
 
 .sensor-container:hover{
@@ -81,14 +84,18 @@ li{
 .circle-container{
     border: 2px green solid;
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 6.25rem; /* 100px */
+    height: 6.25rem; /* 100px */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.sensor-name:hover{
+.sensor-title{
+    transition: font-size 0.3s ease-in-out;
+}
+
+.sensor-title:hover{
     cursor: pointer;
     font-size: 2.05em;
 }
