--- a/style_upgrade.css
+++ b/style_upgrade.css
@@ -107,3 +107,15 @@ li {
     cursor: pointer;
     font-size: 1.5em;
 }
+
+.custom-icon {
+    position: fixed;
+    bottom: 15px;
+    left: 15px;
+    z-index: 2;
+    cursor: pointer;
+    width: 30px; /* Adjust this to change the width of the icon */
+    height: 30px; /* Adjust this to change the height of the icon */
+}
+
+
