--- a/style_upgrade.css
+++ b/style_upgrade.css
@@ -119,3 +119,68 @@ li {
 }
 
 
+
+/*About us Section!!!*/
+.about-section {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px;
+    text-align: center;
+}
+
+/* Introduction Section */
+.intro-section {
+    margin-bottom: 40px;
+}
+
+.intro-section h1 {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.intro-section p {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+}
+
+/* Team Members Section */
+.team-members h2 {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+
+.team-members ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.team-members li {
+    flex-basis: calc(20% - 20px);
+    margin-bottom: 20px;
+    padding: 30px;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 768px) {
+    .team-members li {
+        flex-basis: calc(50% - 20px);
+    }
+}
