--- a/style_upgrade.css
+++ b/style_upgrade.css
@@ -9,19 +9,18 @@
 }
 
 body {
-    overflow-x: hidden;
-    overflow: hidden;
+    overflow: auto;
     background-image: url(./images/ld_DAJ-NA03YsxFGKV79YOzuRP2q5M_9YCTptcRc6so.webp);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
 
 li {
     list-style: none;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
 .burger-button {
@@ -152,21 +151,16 @@ li {
     margin-bottom: 20px;
 }
 
-
 .team-members ul {
     list-style: none;
     padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-left: -10px;
-    margin-right: -10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 20px;
 }
 
 .team-members li {
-    flex-basis: calc(20% - 20px);
-    margin-bottom: 20px;
     padding: 30px;
     background-color: #f1f1f1;
     border-radius: 5px;
