--- a/style_Sensores.css
+++ b/style_Sensores.css
@@ -63,13 +63,15 @@ li {
 }
 
 .sensor-showcase {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    margin-top: 50px; /* Added margin to push the section down */
-    margin-bottom: 50px; /* Added margin to push the section up */
+    flex-direction: row;
+    width: 80%; /* Adjust this value if needed */
+    overflow: hidden;
+    align-items: flex-start; /* Updated alignment */
 }
 
 .sensor-container {
@@ -83,12 +85,11 @@ li {
     background-color: orange;
     transition: all 0.3s ease-in-out;
     text-align: center;
-    margin-left: 20px; /* Updated margin to move the container to the right */
+    margin-left: 50px; /* Added margin to move the container to the right */
 }
 
-
 .big-container {
-    width: calc(100% - 12.5rem - 60px); /* Adjusted width to take up remaining space */
+    width: calc(100% - 12.5rem - 20px); /* Adjusted width to take up remaining space */
     height: 37.5rem; /* Same height as the sensor container */
     border: 6px solid darkorange; /* Added border for consistency */
     background-color: orange; /* Same color as sensor container */
@@ -96,7 +97,7 @@ li {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 30px; /* Updated margin to create space on the left */
+    margin-left: 20px; /* Added margin to move the container to the right */
 }
 
 .circle-container {
