--- a/style_upgrade.css
+++ b/style_upgrade.css
@@ -10,7 +10,8 @@
 
 body {
     overflow: auto;
-    background-image: url(./images/ld_DAJ-NA03YsxFGKV79YOzuRP2q5M_9YCTptcRc6so.webp);
+    /*background-image: url(./images/ld_DAJ-NA03YsxFGKV79YOzuRP2q5M_9YCTptcRc6so.webp);*/
+    background-color: rgb(107,148,78);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
@@ -70,6 +71,14 @@ li {
     gap: 30px;
     margin-top: 50px; /* Added margin to push the section down */
     margin-bottom: 50px; /* Added margin to push the section up */
+    width: fit-content;
+    background-color: aliceblue;
+    padding: 10px;
+    border-radius: 2%;
+    position: relative;
+    left: 400px;
+    top: 150px;
+    box-shadow: 10px 10px blue;
 }
 
 .sensor-container {
@@ -83,7 +92,10 @@ li {
     background-color: orange;
     transition: all 0.3s ease-in-out;
     text-align: center;
-    margin-left: 20px; /* Updated margin to move the container to the right */
+}
+
+.sensor-container:not(:first-child) {
+    margin-left: 20px;/* Updated margin to move the container to the right */
 }
 
 
