There was a bug of repeated initilialization of map and needed to destroy chart to create new

--- a/style_Sensores.css
+++ b/style_Sensores.css
@@ -274,9 +274,11 @@ li {
 }
 
 /* Table section */
+
 .table {
     border-collapse: collapse;
     width: 100%;
+    overflow: scroll;
   }
   
   .table th,
